fixing footer links spacing

--- a/frontend/styles/components/footer.scss
+++ b/frontend/styles/components/footer.scss
@@ -62,7 +62,6 @@
     background: #213a59;
     color: $color-text-white;
     padding-top: 30px;
-    margin-top: 50px;
 
     @include media-breakpoint-down(md) {
         .container {
@@ -125,7 +124,7 @@
         &.footer-nav {
             width: 50%;
             @include media-breakpoint-up(md) {
-                margin-top: 10px;
+                margin-top: 20px;
             }
             @include media-breakpoint-down(sm) {
                 width: 100%;
@@ -185,15 +184,13 @@
             margin-bottom: 10px;
         }
     }
+
     .social {
         display: flex;
         justify-content: space-between;
 
-        @include media-breakpoint-up(lg) {
-            padding-right: 0;
-        }
         @include media-breakpoint-up(md) {
-            max-width: 15%;
+            max-width: 9%;
         }
 
         ul {
